# ai-setup-forge

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
agents/: api-tester-specialist.agent.md  architect.agent.md  docs-agent.agent.md  flaky-test-hunter.agent.md  implementation-plan.agent.md  playwright-test-generator.agent.md  principal-software-engineer.agent.md  selenium-test-executor.agent.md  selenium-test-specialist.agent.md  test-refactor-specialist.agent.md
docs/: AGENTS.md  AGENT_TEMPLATE.md  ARCHITECTURE.md  SKILLS_MANAGER.md  SPEC_SKILLS_REGISTRY.md
scripts/: import_skills_sh.py
skills-registry/: bundled_agents_map.json  bundled_skills_map.json  schema.sql
skills/accessibility-audit/: SKILL.md
skills/accessibility-selenium-testing/: SKILL.md
skills/adapter-pattern-typescript/: SKILL.md
skills/advanced-rbac/: SKILL.md
skills/ai-agent-design-patterns/: SKILL.md
skills/ai-model-evaluation/: SKILL.md
skills/ansible-playbook-creation/: SKILL.md
skills/api-data-fetching-tanstack/: SKILL.md
skills/api-design/: SKILL.md
skills/api-documentation-best-practices/: SKILL.md
skills/api-rest-endpoint-design/: SKILL.md
skills/api-versioning-strategies/: SKILL.md
skills/app-store-deployment-guide/: SKILL.md
skills/architectural-decision-records-adr/: SKILL.md
skills/authentication-strategy-selection/: SKILL.md
skills/automated-database-backups/: SKILL.md
skills/aws-lambda-function-design/: SKILL.md
skills/aws-secrets-manager-integration/: SKILL.md
skills/azure-functions-basics/: SKILL.md
skills/background-jobs-bullmq/: SKILL.md
skills/bff-pattern-implementation/: SKILL.md
skills/blue-green-deployment-strategy/: SKILL.md
skills/branch-protection-rules/: SKILL.md
skills/browser-storage/: SKILL.md
skills/caching-strategy-redis/: SKILL.md
tests/: test_agent_defs.py  test_agents.py  test_finder.py  test_installer.py  test_registry.py  test_remover.py  test_skill_lock.py  test_skills.py  test_source_parser.py  test_updater.py  test_validator.py
(+175 files in other folders)
